--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
-<link rel="stylesheet" href="styles.css">
+body {
+    font-family: 'Montserrat', sans-serif;
+}
