--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap');
 
+:root {
+    --primary-color: #059669;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
+}
+
+hr{
+    margin: 2rem 0;
+}
+
+.container {
+    padding: 0rem 1rem;
+}
+
+.container-center {
+    width: 600px;
+    margin: auto;
+}
+
+.links {
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+}
+
+.primary-button {
+    background-color: var(--primary-color);
+    color: white;
+}
+
+.secondary-button {
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
 }
