--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-hr{
+hr {
     margin: 2rem 0;
 }
 
@@ -35,4 +35,13 @@ hr{
 .secondary-button {
     color: var(--primary-color);
     border: 1px solid var(--primary-color);
+}
+
+.un-bulleted-list {
+    list-style-type: none;
+}
+
+.inline-lists li{
+    display: inline;
+    padding: 0rem 1rem;
 }
