--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
 
 :root {
     --primary-color: #059669;
-    --light-purple: #4c4981;
+    --dark-purple: #6366F1;
+    /* #575a89; */
     --light-gray: #F3F4F6;
 }
 
@@ -11,7 +12,7 @@ body {
 }
 
 hr {
-    margin: 2rem 0;
+    margin: 2rem 0rem;
 }
 
 .container {
@@ -50,7 +51,7 @@ hr {
 
 .navigation {
     background-color: var(--primary-color);
-    padding: 1rem 0;
+    padding: 1rem 0rem;
     border-bottom-left-radius: 1rem;
 }
 
@@ -81,11 +82,15 @@ hr {
 }
 
 .hero h1 {
-    color: var(--light-purple);
+    color: var(--primary-color);
+}
+
+.purple-heading {
+    color: var(--dark-purple);
 }
 
 .section {
-    padding: 2rem 0;
+    padding: 2rem 0rem;
 }
 
 .section h2 {
@@ -101,11 +106,12 @@ hr {
     border-top-right-radius: 1rem;
 }
 
-.footer .heading, a {
+.footer .heading,
+a {
     color: white;
 }
 
-.footer ul{
+.footer ul {
     text-align: center;
-    padding: 0;
+    padding: 0rem;
 }
